# uib-notes

./: .gitignore  README.md
Competition/: ceremony.py  elevatortrouble.py  elevatortroubleBRUTEFORCE.py  heirsdilemma.py  ls.py  reactivityseries.py  reactivityseries2.py
INF100/: README.md
INF101/: README.md
INF115-comp3/: CE3.php
INF115Krasj/: Preamble.aux  Preamble.dvi  Preamble.fdb_latexmk  Preamble.fls  Preamble.nav  Preamble.out  Preamble.snm  Preamble.tex  Preamble.toc  Preamble.vrb  Presentation.tex  README.md  sub_fil.tex  sub_indeks.tex  sub_normal.tex  sub_sql.tex  sub_trans.tex
INF122/: Gruppeaktivitet_uke_2.pptx  README.md
INF140/: README.md
INF226/: findOffset.py
INF234/: countingInversions.py
INF273/oblig/hawkHaulTuah/: CLAUDE.md  Cargo.toml  README.md  count_faults.py  localsearchOut.txt  saOut.txt
INF273/oblig/hawkHaulTuah/src/: main.rs
INF273/oblig/hawkHaulTuah/src/checker/: Cargo.toml
INF273/oblig/hawkHaulTuah/src/checker/src/: checker.rs  feasibility_checker.rs  main.rs
INF273/oblig/hawkHaulTuah/src/file_reader/: Cargo.toml
INF273/oblig/hawkHaulTuah/src/file_reader/src/: lib.rs  parse_data.rs
INF273/oblig/hawkHaulTuah/src/local_search/: Cargo.toml
INF273/oblig/hawkHaulTuah/src/local_search/src/: lib.rs  local_search.rs  main.rs  operators.rs
INF273/oblig/hawkHaulTuah/src/random_meta/: Cargo.toml
INF273/oblig/hawkHaulTuah/src/random_meta/src/: random.rs
INF273/oblig/hawkHaulTuah/src/simmulated_annealing/: Cargo.toml
INF273/oblig/hawkHaulTuah/src/simmulated_annealing/src/: lib.rs  main.rs  simmulated_annealing.rs
(+594 files in other folders)
